--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 241,
    "id": "3d2e4920",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 242,
    "id": "ebc85405",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 243,
    "id": "77afd319",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "{}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,10 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 244,
    "id": "3c262405",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "tiendaonline.agregar_producto() takes 2 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[244]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnombre\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprecio\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcantidad\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: tiendaonline.agregar_producto() takes 2 positional arguments but 4 were given"
+     ]
+    }
+   ],
    "source": [
     "mi_tienda.agregar_producto(\"nombre\",\"precio\",\"cantidad\")"
    ]
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "649e3fab",
    "metadata": {},
    "outputs": [],
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "c3b4b12b",
    "metadata": {},
    "outputs": [],
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "852d2627",
    "metadata": {},
    "outputs": [
@@ -115,31 +127,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "10e269a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "tiendaonline.agregar_producto() missing 3 required positional arguments: 'nombre', 'precio', and 'cantidad'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[91]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m mi_tienda=tiendaonline()\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m lista_inventario:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: tiendaonline.agregar_producto() missing 3 required positional arguments: 'nombre', 'precio', and 'cantidad'"
-     ]
-    }
-   ],
-   "source": [
-    "mi_tienda=tiendaonline()\n",
-    "\n",
-    "for producto in lista_inventario:\n",
-    "    mi_tienda.agregar_producto()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "2eb7e3fa",
    "metadata": {},
@@ -149,86 +136,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2047704",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class tiendaonline:                            \n",
-    "\n",
-    "\n",
-    "    def _init_(self):      \n",
-    "        \n",
-    "        self.inventario = []        \n",
-    "        self.ventas_totales = 0.0          \n",
-    "    def agregar_producto(self, nombre, precio, cantidad):\n",
-    "        if nombre in self.inventario:\n",
-    "            print(\"ese producto esta\")\n",
-    "        else:\n",
-    "            self.inventario[lista_inventario]= [nombre, precio, cantidad]\n",
-    "            print(f\"el producto {nombre} ha sido añadido\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "id": "f9b89cc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mi_tienda = tiendaonline()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "6aace84f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mi_tienda.__dict__                #no sale nada porque está vacia ahora mismo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "afb95e8d",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "eabfbf16",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tiendaonline' object has no attribute 'inventario'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[110]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43magregar_producto\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnombre\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprecio\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcantidad\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[107]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mtiendaonline.agregar_producto\u001b[39m\u001b[34m(self, nombre, precio, cantidad)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34magregar_producto\u001b[39m(\u001b[38;5;28mself\u001b[39m, nombre, precio, cantidad):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nombre \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minventario\u001b[49m:\n\u001b[32m     10\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mese producto esta\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mAttributeError\u001b[39m: 'tiendaonline' object has no attribute 'inventario'"
-     ]
-    }
-   ],
-   "source": [
-    "mi_tienda.agregar_producto(\"nombre\",\"precio\",\"cantidad\")"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -248,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 245,
    "id": "bb6c58fa",
    "metadata": {},
    "outputs": [],
@@ -263,22 +174,36 @@
     "        producto_nuevo = {'nombre': nombre, 'precio': precio, 'cantidad': cantidad}\n",
     "        self.inventario.append(producto_nuevo)\n",
     "        \n",
-    "        for producto in self.inventario:\n",
+    "        for producto in self.inventario:          #ver si el prodcuto existe y añado cantidad o añado prodc\n",
     "            if producto['nombre'] == nombre:\n",
     "                producto['cantidad'] += cantidad\n",
-    "                return\n",
+    "                return                               #evito que se duplique el articulo y paro el metedo\n",
+    "                \n",
     "            else:\n",
     "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
     "                \n",
     "    def ver_inventario(self):                    #para ver iventario\n",
     "        for producto in self.inventario:\n",
     "            print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
-    "    \n"
+    "    \n",
+    "    def buscar_producto(self, nombre):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
+    "    \n",
+    "    def actualizar_stock(self, nombre, cantidad):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                producto['cantidad'] += cantidad\n",
+    "                print(\"Stock actualizado\")\n",
+    "            \n",
+    "            \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 246,
    "id": "91f7d226",
    "metadata": {},
    "outputs": [],
@@ -288,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 247,
    "id": "55bb19ae",
    "metadata": {},
    "outputs": [
@@ -298,7 +223,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 248,
    "id": "db68ac09",
    "metadata": {},
    "outputs": [],
@@ -319,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 249,
    "id": "8271797b",
    "metadata": {},
    "outputs": [
@@ -330,7 +255,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 250,
    "id": "6b795dc8",
    "metadata": {},
    "outputs": [],
@@ -351,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 251,
    "id": "60e5dfaa",
    "metadata": {},
    "outputs": [
@@ -363,7 +288,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 252,
    "id": "d64896df",
    "metadata": {},
    "outputs": [],
@@ -384,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 253,
    "id": "03328f9e",
    "metadata": {},
    "outputs": [
@@ -397,7 +322,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 254,
    "id": "78b6c333",
    "metadata": {},
    "outputs": [],
@@ -418,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 255,
    "id": "17598cff",
    "metadata": {},
    "outputs": [
@@ -432,7 +357,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,16 +367,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0aaa5d99",
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "00fbb135",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#ver inventario"
+    "mi_tienda.agregar_producto(\"jersey\",50, 17)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 257,
+   "id": "d94d6a8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60},\n",
+       "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aaa5d99",
+   "metadata": {},
+   "source": [
+    "#ver inventario    ojo!! el jersey no lo he metido en el proyecto era para probar con otra prenda porque se me duplican y no me cuadran  las cantidades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "id": "41010796",
    "metadata": {},
    "outputs": [
@@ -462,35 +423,13 @@
       "Nombre: camisa,Precio: $20,Cantidad: 80\n",
       "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
       "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
-      "Nombre: falda,Precio: $10,Cantidad: 60\n"
+      "Nombre: falda,Precio: $10,Cantidad: 60\n",
+      "Nombre: jersey,Precio: $50,Cantidad: 34\n"
      ]
     }
    ],
    "source": [
-    "mi_tienda.ver_inventario()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5810070b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tienda' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[109]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtienda\u001b[49m.inventrio:\n\u001b[32m      2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(producto)\n",
-      "\u001b[31mNameError\u001b[39m: name 'tienda' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "for producto in tienda.inventario:\n",
-    "    print(producto)"
+    "mi_tienda.ver_inventario()                              "
    ]
   },
   {
@@ -499,6 +438,105 @@
    "metadata": {},
    "source": [
     "#buscar producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "e5bc5992",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"camisa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "2b673543",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"pantalon\")             #me sale 2 veces ( se me ha duplicado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "834d2b92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: falda,Precio: $10,Cantidad: 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"falda\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52aa8e0f",
+   "metadata": {},
+   "source": [
+    "#comprobar stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "id": "379fd804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stock actualizado\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock (\"camisa\" , 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c6939bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 130\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"camisa\")                     #compruebo que se ha actualizado bien el stock"
    ]
   }
  ],
