--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 183,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -23,15 +23,30 @@
     "                return\n",
     "            else:\n",
     "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
-    "    def ver_inventario(self):                    #para ver iventario\n",
+    "    def ver_inventario(self):                   \n",
     "        for producto in self.inventario:\n",
     "            print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
-    "    "
+    "    \n",
+    "    def buscar_producto(self, nombre):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
+    "                return\n",
+    "        else:\n",
+    "            print(\"el producto no existe\")\n",
+    "\n",
+    "    def actualizar_stock(self, nombre, cantidad):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                producto['cantidad'] += cantidad\n",
+    "                print(\"Stock actualizado\")\n",
+    "                \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 184,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 185,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
@@ -51,7 +66,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 186,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -80,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 187,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
@@ -91,7 +106,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 188,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
@@ -112,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 189,
    "id": "10151210",
    "metadata": {},
    "outputs": [
@@ -124,7 +139,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 190,
    "id": "56f3a4bd",
    "metadata": {},
    "outputs": [],
@@ -145,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 191,
    "id": "d8a309b0",
    "metadata": {},
    "outputs": [
@@ -158,7 +173,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 192,
    "id": "18032fce",
    "metadata": {},
    "outputs": [],
@@ -179,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 193,
    "id": "729cb934",
    "metadata": {},
    "outputs": [
@@ -193,7 +208,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 194,
    "id": "eb1e4418",
    "metadata": {},
    "outputs": [
@@ -229,6 +244,149 @@
    ],
    "source": [
     "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe4c764",
+   "metadata": {},
+   "source": [
+    "#buscar producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "8ea82357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"camisa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "e1d0940c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"pantalon\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "b56d39e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el producto no existe\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"kimono\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d4e01fd",
+   "metadata": {},
+   "source": [
+    "#compruebo stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "ee521b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stock actualizado\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock (\"camisa\" , 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50bdbfde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 130\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"camisa\")                     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "28b8e4c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stock actualizado\n",
+      "Stock actualizado\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock (\"pantalon\" , -20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "78dac6a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: pantalon,Precio: $20,Cantidad: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto(\"pantalon\")  "
    ]
   }
  ],
