--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 716,
    "id": "bb6c58fa",
    "metadata": {},
    "outputs": [],
@@ -196,6 +196,25 @@
     "            if producto['nombre'] == nombre:\n",
     "                producto['cantidad'] += cantidad\n",
     "                print(\"Stock actualizado\")\n",
+    "                return\n",
+    "            else:\n",
+    "                print(\" no esta en el inventario\")\n",
+    "        \n",
+    "    def eliminar_producto(self, nombre):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                self.inventario.remove(producto)\n",
+    "                print(\"producto eliminado\")\n",
+    "                return\n",
+    "            else:\n",
+    "                print(\"Producto no encontrado en el inventario\")\n",
+    "                \n",
+    "            \n",
+    "        \n",
+    "             \n",
+    "\n",
+    "    \n",
+    "    \n",
     "            \n",
     "            \n",
     "\n"
@@ -203,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 717,
    "id": "91f7d226",
    "metadata": {},
    "outputs": [],
@@ -213,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 718,
    "id": "55bb19ae",
    "metadata": {},
    "outputs": [
@@ -223,7 +242,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 718,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 719,
    "id": "db68ac09",
    "metadata": {},
    "outputs": [],
@@ -244,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 720,
    "id": "8271797b",
    "metadata": {},
    "outputs": [
@@ -255,7 +274,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 720,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 721,
    "id": "6b795dc8",
    "metadata": {},
    "outputs": [],
@@ -276,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 722,
    "id": "60e5dfaa",
    "metadata": {},
    "outputs": [
@@ -288,7 +307,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 722,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 723,
    "id": "d64896df",
    "metadata": {},
    "outputs": [],
@@ -309,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 724,
    "id": "03328f9e",
    "metadata": {},
    "outputs": [
@@ -322,7 +341,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 724,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 725,
    "id": "78b6c333",
    "metadata": {},
    "outputs": [],
@@ -343,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 726,
    "id": "17598cff",
    "metadata": {},
    "outputs": [
@@ -357,7 +376,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 726,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 727,
    "id": "00fbb135",
    "metadata": {},
    "outputs": [],
@@ -378,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 728,
    "id": "d94d6a8f",
    "metadata": {},
    "outputs": [
@@ -393,7 +412,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 728,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 729,
    "id": "41010796",
    "metadata": {},
    "outputs": [
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 730,
    "id": "e5bc5992",
    "metadata": {},
    "outputs": [
@@ -460,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 731,
    "id": "2b673543",
    "metadata": {},
    "outputs": [
@@ -479,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 732,
    "id": "834d2b92",
    "metadata": {},
    "outputs": [
@@ -505,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 733,
    "id": "379fd804",
    "metadata": {},
    "outputs": [
@@ -523,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 734,
    "id": "9c6939bd",
    "metadata": {},
    "outputs": [
@@ -537,6 +556,117 @@
    ],
    "source": [
     "mi_tienda.buscar_producto(\"camisa\")                     #compruebo que se ha actualizado bien el stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 735,
+   "id": "412c49b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock (\"kimono\" , -20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 736,
+   "id": "e653ca4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60},\n",
+       "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 736,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_tienda.__dict__ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 737,
+   "id": "c951c5e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producto no encontrado en el inventario\n",
+      "Producto no encontrado en el inventario\n",
+      "Producto no encontrado en el inventario\n",
+      "producto eliminado\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.eliminar_producto (\"falda\")                  #me da todo el rato error con todo lo que pruebo .remove .pop etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 738,
+   "id": "13a21c48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: camisa,Precio: $20,Cantidad: 130\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
+      "Nombre: jersey,Precio: $50,Cantidad: 34\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 739,
+   "id": "6d5f1d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producto no encontrado en el inventario\n",
+      "Producto no encontrado en el inventario\n",
+      "Producto no encontrado en el inventario\n",
+      "Producto no encontrado en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.eliminar_producto (\"calcetines\")   "
    ]
   }
  ],
