--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 305,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -40,13 +40,25 @@
     "            if producto['nombre'] == nombre:\n",
     "                producto['cantidad'] += cantidad\n",
     "                print(\"Stock actualizado\")\n",
+    "                return\n",
+    "        else:\n",
+    "                print(\" no esta en el inventario\")\n",
+    "    \n",
+    "    def eliminar_producto(self, nombre):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                self.inventario.remove(producto)\n",
+    "                print(\"producto eliminado\")\n",
+    "                return\n",
+    "        else:\n",
+    "                print(\"Producto no encontrado en el inventario\")\n",
     "                \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 284,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 285,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
@@ -66,7 +78,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 286,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 287,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
@@ -106,7 +118,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 288,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 289,
    "id": "10151210",
    "metadata": {},
    "outputs": [
@@ -139,7 +151,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 290,
    "id": "56f3a4bd",
    "metadata": {},
    "outputs": [],
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 291,
    "id": "d8a309b0",
    "metadata": {},
    "outputs": [
@@ -173,7 +185,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 292,
    "id": "18032fce",
    "metadata": {},
    "outputs": [],
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 293,
    "id": "729cb934",
    "metadata": {},
    "outputs": [
@@ -208,7 +220,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 294,
    "id": "eb1e4418",
    "metadata": {},
    "outputs": [
@@ -256,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 295,
    "id": "8ea82357",
    "metadata": {},
    "outputs": [
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 296,
    "id": "e1d0940c",
    "metadata": {},
    "outputs": [
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 297,
    "id": "b56d39e4",
    "metadata": {},
    "outputs": [
@@ -318,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 298,
    "id": "ee521b26",
    "metadata": {},
    "outputs": [
@@ -336,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 299,
    "id": "50bdbfde",
    "metadata": {},
    "outputs": [
@@ -354,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 300,
    "id": "28b8e4c3",
    "metadata": {},
    "outputs": [
@@ -362,18 +374,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stock actualizado\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
       "Stock actualizado\n"
      ]
     }
    ],
    "source": [
-    "mi_tienda.actualizar_stock (\"pantalon\" , -20)"
+    "mi_tienda.actualizar_stock (\"falda\" , -20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 301,
    "id": "78dac6a5",
    "metadata": {},
    "outputs": [
@@ -381,12 +395,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: pantalon,Precio: $20,Cantidad: 100\n"
+      "Nombre: falda,Precio: $10,Cantidad: 40\n"
      ]
     }
    ],
    "source": [
-    "mi_tienda.buscar_producto(\"pantalon\")  "
+    "mi_tienda.buscar_producto(\"falda\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "6d8b69a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n",
+      " no esta en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock (\"kimono\" , -20)"
    ]
   }
  ],
